# verl_agent_env_examples

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: .gitignore  claude_play_frozen_lake.py  gpt_play_countdown.py  gpt_play_frozen_lake.py  gpt_play_mcp_amzn_shopping_chat.py  gpt_play_mcp_chat.py  gpt_play_single_turn.py  gpt_play_sokoban.py  gpt_play_sokoban_service.py
examples/verl/sokoban/: README.md  curate_data.py  curate_data_simple.py  run_agent_qwen2_5-7b.sh  test_verl_dataloader.py
src/verl_agent_env/: .gitignore  __init__.py  app.py  env.py  interface.py
src/verl_agent_env/envs/: base.py  countdown.py  frozen_lake.py  single_turn_chat.py
src/verl_agent_env/envs/mcp/: mcp_chat.py  mcp_client.py
src/verl_agent_env/envs/sokoban/: render_utils.py  sokoban.py
tests/: test_interface.py
