[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verl_agent_env"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Environment Examples of LLM Agents for VeRL integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "gymnasium>=1.1.1",
    "openai>=1.70.0",
    "boto3",
    "imageio>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 